examples/appprotect/apples.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apples-deployment
  labels:
    app: apples
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apples
  template:
    metadata:
      labels:
        app: apples
    spec:
      containers:
      - name: thttp
        image: quay.pdsea.f5net.com/wegrzycki/thttp
        args: ["string", "apples"]
        ports:
        - containerPort: 8090

---
apiVersion: v1
kind: Service
metadata:
  name: apples
spec:
  type: ClusterIP
  ports:
    - port: 8090
  selector:
    app: apples
