examples/appprotect/bananas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bananas-deployment
  labels:
    app: bananas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bananas
  template:
    metadata:
      labels:
        app: bananas
    spec:
      containers:
      - name: thttp
        image: quay.pdsea.f5net.com/wegrzycki/thttp
        args: ["string", "bananas"]
        ports:
        - containerPort: 8090

---
apiVersion: v1
kind: Service
metadata:
  name: bananas
spec:
  type: ClusterIP
  ports:
    - port: 8090
  selector:
    app: bananas
