examples/appprotect/cats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cats-deployment
  labels:
    app: cats
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cats
  template:
    metadata:
      labels:
        app: cats
    spec:
      containers:
      - name: thttp
        image: quay.pdsea.f5net.com/wegrzycki/thttp
        args: ["string", "cats"]
        ports:
        - containerPort: 8090

---
apiVersion: v1
kind: Service
metadata:
  name: cats
spec:
  type: ClusterIP
  ports:
    - port: 8090
  selector:
    app: cats
