examples/appprotect/dogs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dogs-deployment
  labels:
    app: dogs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dogs
  template:
    metadata:
      labels:
        app: dogs
    spec:
      containers:
      - name: thttp
        image: quay.pdsea.f5net.com/wegrzycki/thttp
        args: ["string", "dogs"]
        ports:
        - containerPort: 8090

---
apiVersion: v1
kind: Service
metadata:
  name: dogs
spec:
  type: ClusterIP
  ports:
    - port: 8090
  selector:
    app: dogs
